[gd_scene load_steps=3 format=2]

[ext_resource path="res://World/SaveStation.tscn" type="PackedScene" id=1]
[ext_resource path="res://World/BrokenSaveStation.gd" type="Script" id=2]

[node name="BrokenSaveStation" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="WhiteSpaceSprite" parent="." index="3"]
visible = true

[node name="PitchTween" type="Tween" parent="." index="5"]

[node name="SmokeTimer" type="Timer" parent="." index="6"]
autostart = true
[connection signal="timeout" from="SmokeTimer" to="." method="_on_SmokeTimer_timeout"]
